--- a/freeCodeCamp/Responsive WEB design/index.html
+++ b/freeCodeCamp/Responsive WEB design/index.html
@@ -5,9 +5,31 @@
 </head>
 
 <body>
-    <h1>Hello World</h1>
+    <main>
+        <p>Click here to view more <a href="#">cat photos</a>.</p>
 
-    <h2>CatPhotoApp</h2>
+        <a href="#"><img src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back."></a>
 
-    <p>Hello Paragraph</p>
+        <p>Things cats love:</p>
+        <ul>
+            <li>cat nip</li>
+            <li>laser pointers</li>
+            <li>lasagna</li>
+        </ul>
+        <p>Top 3 things cats hate:</p>
+        <ol>
+            <li>flea treatment</li>
+            <li>thunder</li>
+            <li>other cats</li>
+        </ol>
+        <form action="/submit-cat-photo">
+            <label for="indoor"><input id="indoor" type="radio" name="indoor-outdoor"> Indoor</label>
+            <label for="outdoor"><input id="outdoor" type="radio" name="indoor-outdoor"> Outdoor</label><br>
+            <input type="text" placeholder="cat photo URL" required>
+            <button type="submit">Submit</button><br>
+            <label for="check"><input id="check" type="checkbox" name="personality"></label>
+            <label for="check"><input id="check" type="checkbox" name="personality"></label>
+            <label for="check"><input id="check" type="checkbox" name="personality"></label>
+        </form>
+    </main>
 </body>
