--- a/freeCodeCamp/Responsive WEB design/bootstrapChelenges.html
+++ b/freeCodeCamp/Responsive WEB design/bootstrapChelenges.html
@@ -9,7 +9,15 @@
 
 <body>
     <main>
+        <div class="container-fluid">
+            <h2 class="red-text text-center">CatPhotoApp</h2>
 
+            <p>Click here for <a href="#">cat photos</a>.</p>
+
+            <a href="#"><img class="smaller-image thick-green-border" src="https://bit.ly/fcc-relaxing-cat"
+                    alt="A cute orange cat lying on its back."></a>
+            <img class="img-responsive" src="https://bit.ly/fcc-running-cats">
+        </div>
     </main>
 </body>
 
