--- a/freeCodeCamp/Front And librares/bootstrap_jquery.html
+++ b/freeCodeCamp/Front And librares/bootstrap_jquery.html
@@ -8,6 +8,8 @@
     <!-- its font awesom icons!-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" integrity="sha384-XdYbMnZ/QjLh6iI4ogqCTaIjrFk87ip+ekIjefZch0Y+PvJ8CDYtEs1ipDmPorQ+" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
+    <!-- its jquery-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 </head>
 
 <body>
@@ -15,7 +17,9 @@
 
         <script>
             $(document).ready(function() {
-
+              $("button").addClass("animated bounce");
+              $(".well").addClass("animated shake");
+              $("button").addClass("btn-default");
             });
         </script>
         <!--Only change code above this line-->
@@ -43,6 +47,7 @@
         </div>
 
     </main>
+   
 </body>
 
 </html>
