--- a/freeCodeCamp/Front And librares/bootstrap_jquery.html
+++ b/freeCodeCamp/Front And librares/bootstrap_jquery.html
@@ -20,6 +20,13 @@
               $("button").addClass("animated bounce");
               $(".well").addClass("animated shake");
               $("button").addClass("btn-default");
+              $("#target1").css("color", "red");
+              $("#target1").prop("disabled", true);
+              $("#target4").remove();
+              $('#target2').appendTo('#right-well');
+              $('#target5').clone().appendTo('#left-well');
+              $('#target1').parent().css('background-color', 'red');
+              $('#right-well').children().css('color', 'orange');
             });
         </script>
         <!--Only change code above this line-->
