--- a/freeCodeCamp/Front And librares/LearnSass.html
+++ b/freeCodeCamp/Front And librares/LearnSass.html
@@ -12,8 +12,36 @@
     text-align: center;
   }
   .blog-post, h2 {
-    color: $text-color;
+    color: $text-color;  
   }
+
+    @mixin border-stroke($val) {
+    @if $val == light {
+    border: 1px solid black;
+    }
+    @else if $val == medium {
+    border: 3px solid black;
+    }
+    @else if $val == heavy {
+    border: 6px solid black;
+    }
+    @else {
+    border: none;
+    }
+  }
+  
+  
+  #box {
+    width: 150px;
+    height: 150px;
+    background-color: red;
+    @include border-stroke(medium);
+  } 
+
+    @for $j from 1 through 6 {
+    .text-#{$j} { font-size: $j * 10px; }
+  }
+
 </style>
 
 <h1 class="header">Learn Sass</h1>
@@ -29,5 +57,14 @@
   <h2>Here is another header</h2>
   <p>Even more random text within a paragraph</p>
 </div>
+
+<div id="box"></div>
+
+<p class="text-1">Hello</p>
+<p class="text-2">Hello</p>
+<p class="text-3">Hello</p>
+<p class="text-4">Hello</p>
+<p class="text-5">Hello</p>
+
 </body>
 </html>
