add search variation to DOM API tasks

--- a/HEXLET/JS: DOM API/_hexletJSDOM.html
+++ b/HEXLET/JS: DOM API/_hexletJSDOM.html
@@ -10,12 +10,7 @@
     <p>1</p>
    text
    <div><p>2</p></div>
-   <script>
-   const elements = search(document, 'p');
-   // ['<p>1</p>' '<p>2</p>'] где каждый элемент это объект соответствующего типа
-   console.log(elements.length); // 2
-
-   </script>
+   <script src="searchHexletDOM.js"></script>
 </body>
 
 </html>
