add DOM search to Hexlet

--- a/HEXLET/JS_DOM_API/_hexletJSDOM.html
+++ b/HEXLET/JS_DOM_API/_hexletJSDOM.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>HEXLET DOM</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <p>1</p>
-   text
-   <div><p>2</p></div>
-   <script src="searchHexletDOM.js"></script>
+New
+<div>
+    <h1>Start</h1>
+    <div>
+        <h2>Continue</h2>
+    </div>
+</div>
+<p>Paragraph</p>
+<table>
+    <tr>
+        <th>1</th>
+        <th>2</th>
+    </tr>
+    <tr>
+        <td>
+            <ul>
+                <li>li</li>
+                <li>li</li>
+                <li>li</li>
+            </ul>
+        </td>
+        <td>
+            <p>Paragraph 2</p>
+        </td>
+    </tr>
+</table>
+<ul>
+    <li>li</li>
+</ul>
 </body>
-
 </html>
