--- a/HEXLET/JS_DOM_API/search.html
+++ b/HEXLET/JS_DOM_API/search.html
@@ -32,6 +32,6 @@ New
 <ul>
     <li>li</li>
 </ul>
-<script src="searchHexletDOM.js" ></script>
+<script src="search.js" ></script>
 </body>
 </html>
