work with hexlet

--- a/HEXLET/JS_DOM_API/prettyfy3.html
+++ b/HEXLET/JS_DOM_API/prettyfy3.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<link href="style.css" rel="stylesheet">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -8,11 +7,10 @@
 <body>
 Text
 <div>
-    <div>complex<div>test</div></div>
     <div>Text</div>
-    <p>Op</p>
-</div>
+    <p>Op</p></div>
 <div>My</div>
 <script src="prettify.js"></script>
 </body>
 </html>
+<!--TODO  Text<div><div><p>Text</p></div><p>Op</p></div><div><p>My</p></div>-->
