--- a/hackerEath/circuit20_feb/index.html
+++ b/hackerEath/circuit20_feb/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<meta name="viewport" content="width=device-width"
+<meta name="viewport" content="width=device-width" />
 <html>
-    <head>
-        <title>february HackerEath Challenge 2020</title>
-    </head>
-    <body>
-<script src="firecrackers.js"></script>
-    </body>
+  <head>
+    <title>february HackerEath Challenge 2020</title>
+  </head>
+  <body>
+    <script src="firecrackers.js"></script>
+  </body>
 </html>
