Feature: JSON task [ref: JS & Vue tasks]

--- a/Stepic/JS_with_Vue/index.html
+++ b/Stepic/JS_with_Vue/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title></title>
+  </head>
 
-<head>
-  <title></title>
-</head>
-
-<body>
-  <p>Some indexes</p>
-  <script src="tasks.js"></script>
-</body>
-
+  <body>
+    <p style="font-size: large; color: red;">Some indexes</p>
+    <script src="tasks.js"></script>
+  </body>
 </html>
