--- a/Stepic/JS_with_Vue/index.html
+++ b/Stepic/JS_with_Vue/index.html
@@ -5,7 +5,7 @@
   </head>
 
   <body>
-    <p style="font-size: large; color: red;">Some indexes</p>
+    <p style="font-size: 100px; color: red;">Some indexes</p>
     <script src="tasks.js"></script>
   </body>
 </html>
