--- a/CodeWars/index.html
+++ b/CodeWars/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Title</title>
-</head>
-<body>
-<script src="sentry.js"></script>
-</body>
+  </head>
+  <body>
+    <script src="/ giftWellSpent.js"></script>
+  </body>
 </html>
