--- a/CodeWars/index.html
+++ b/CodeWars/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Title</title>
+    <title>index for debugging</title>
   </head>
   <body>
     <script src="/ giftWellSpent.js"></script>
