Feature: add new task from weekly chalenges [ref:no-ref]

--- a/CodeWars/index.html
+++ b/CodeWars/index.html
@@ -5,6 +5,6 @@
     <title>index for debugging</title>
   </head>
   <body>
-    <script src="/ giftWellSpent.js"></script>
+    <script src="common.js"></script>
   </body>
 </html>
