--- a/DebuggingExpl/index.html
+++ b/DebuggingExpl/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Debugging Example</title>
-    <link rel="stylesheet" href="styles.css"> 
+    <link rel="stylesheet" href="./src/styles.css"> 
 </head>
 <body>
     <h1>Web Debug App</h1>
