Feaature: pretier html [ref:noref]

--- a/DebuggingExpl/index.html
+++ b/DebuggingExpl/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -20,11 +20,14 @@
         <tbody class="table-body">
             <tr>
                 <td id="previous" class="table-cell">0</td>
-                <td id="current">0</td>
-                <td id="total">0</td>
+                <td id="current" class="table-cell">0</td>
+                <td id="total" class="table-cell">0</td>
             </tr>
-    </table>
+        </tbody>
 
-    <script src="./dist/bundle.js" class="script_button"></script> <!-- Include the bundled output -->
+           
+    </table>
+    <script src="./dist/bundle.js"></script> <!-- Include the bundled output -->
+ 
 </body>
 </html>
